# tile_studio

./: .gitignore  LICENSE  README.md
.claude/: settings.local.json
backend/: README.md  pyproject.toml  requirements.txt
backend/src/: __init__.py
backend/src/api/: __init__.py  main.py
backend/src/api/routes/: generation.py  health.py
backend/src/generation/: __init__.py  pipeline.py
backend/src/utils/: __init__.py  image.py
docs/: ARCHITECTURE.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Canvas.tsx  IconToolbar.tsx  MenuBar.tsx  Sidebar.tsx  Toolbar.tsx  index.ts
frontend/src/stores/: projectStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: fileUtils.ts  index.ts  ldtkFormat.ts  projectFormat.ts  tileDeduplication.ts  tiledFormat.ts  tilesetExport.ts  tilesetImport.ts
